syntax = "proto3";

package auth;

option go_package = "internal/grpc/authpb;authpb";

message UserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  double balance = 4;
}

message AuthResponse {
  string status = 1;
  string message = 2;
}

service AuthService {
  rpc Registration(UserRequest) returns (AuthResponse);
  rpc Authentication(UserRequest) returns (AuthResponse);
}
